kubernetes/argocd/k8s-dashboard/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    ingress.cilium.io/tls-passthrough: enabled
    ingress.cilium.io/force-https: enabled
spec:
  ingressClassName: cilium
  rules:
    - host: kubernetes-dashboard.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-kong-proxy
                port:
                  number: 443
